# qtrobot-yolo-driver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release-debs.yml
config/: config.yaml
include/qtrobot/: emotion_recognizer.hpp  fast_pose_detector.hpp  pose_backend.hpp  utility.hpp  yolo_driver_config.hpp  yolo_driver_node.hpp
packaging/: postinst  postinst.in  prerm  qtrobot-yolo-driver.service
src/: emotion_recognizer.cpp  fast_pose_detector.cpp  pose_backend.cpp  pose_backend_onnx.cpp  pose_backend_tensorrt.cpp  utility.cpp  yolo_driver_node.cpp
